<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/nextScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_screen"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_Austria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/austria"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_Austria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_Austria" />

    <ImageView
        android:id="@+id/iv_Austria"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/flag"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nextScreen"
        app:srcCompat="@drawable/flag_avstriya_enl"

        />

    <TextView
        android:id="@+id/tv_Poland"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/poland"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_Poland"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_Poland" />

    <ImageView
        android:id="@+id/iv_Poland"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/flag"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Austria"
        app:srcCompat="@drawable/flag_polsha_enl"

        />

    <TextView
        android:id="@+id/tv_Italy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/italy"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_Italy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_Italy" />

    <ImageView
        android:id="@+id/iv_Italy"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/flag"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Poland"
        app:srcCompat="@drawable/flag_italija_enl"

        />

    <TextView
        android:id="@+id/tv_Colombia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/colombia"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_Colombia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_Colombia" />

    <ImageView
        android:id="@+id/iv_Colombia"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/flag"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Italy"
        app:srcCompat="@drawable/flag_kolumbiya_new"

        />

    <TextView
        android:id="@+id/tv_Madagascar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/madagascar"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_Madagascar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_Madagascar" />

    <ImageView
        android:id="@+id/iv_Madagascar"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/flag"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Colombia"
        app:srcCompat="@drawable/flag_madagaskar_new"

        />

    <TextView
        android:id="@+id/tv_Thailand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/thailand"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_Thailand"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_Thailand" />

    <ImageView
        android:id="@+id/iv_Thailand"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/flag"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Madagascar"
        app:srcCompat="@drawable/flag_tailand_new" />

    <TextView
        android:id="@+id/tv_Denmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/denmark"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_Denmark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_Denmark" />

    <ImageView
        android:id="@+id/iv_Denmark"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/flag"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Thailand"
        app:srcCompat="@drawable/flag_danija_enl" />

    <TextView
        android:id="@+id/tv_Switzerland"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/switzerland"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/iv_Switzerland"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/iv_Switzerland" />

    <ImageView
        android:id="@+id/iv_Switzerland"
        android:layout_width="150dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/flag"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_Denmark"
        app:srcCompat="@drawable/flag_shvejtsarija_new" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


